<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".ui.RegisterActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            style="@style/Suit.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_to_rover_road"
            android:textColor="@color/semi_black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Suit.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_age"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Suit.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_age"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_age">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Suit.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_id" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_id"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Suit.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/RoverRoadButton.Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_go_register"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <TextView
            android:id="@+id/tv_register_comment"
            style="@style/Suit.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            android:text="@string/text_register_comment"
            tools:text="@string/text_register_comment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>